@@ -2,8 +2,9 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.94 [20080106]
+Changelog for smp_utils-0.94 [20081014]
   - sgv4: more detail in error messages
+  - sgv4: drop scsi.h include, gives problems with lk 2.6.27
 
 Changelog for smp_utils-0.93 [20080106]
   - sgv4: add new interface
